block breaking & shop